# QUB_rl_junmo

./: README.md
legged_gym/envs/: __init__.py
legged_gym/envs/base/: base_task.py
legged_gym/envs/kubot_flat/: kubot_flat.py  kubot_flat_config.py  qub_config.py.save  qub_flat_config.py.save
legged_gym/envs/qub_flat/: qub_flat.py  qub_flat_config.py
legged_gym/scripts/: play.py
resources/robots/kubot/: CMakeLists.txt  package.xml
resources/robots/kubot/config/: joint_names_kubot25_pkgs.yaml
resources/robots/kubot/launch/: display.launch  gazebo.launch
resources/robots/kubot/meshes/: Head_pitch.STL  Head_pitch_collision.STL  L_Ankle_pitch.STL  L_Ankle_pitch_collision.STL  L_Ankle_roll.STL  L_Ankle_roll_collision.STL  L_Arm_roll.STL  L_Arm_roll_collision.STL  L_Foot.STL  L_Foot_collision.STL  L_Hand_pitch.STL  L_Hand_pitch_collision.STL  L_Hip_pitch.STL  L_Hip_pitch_collision.STL  L_Hip_roll.STL  L_Hip_roll_collision.STL  L_Hip_yaw.STL  L_Hip_yaw_collision.STL  L_Knee_pitch.STL  L_Knee_pitch_collision.STL  L_Shoulder_pitch.STL  L_Shoulder_pitch_collision.STL  Neck_yaw.STL  Neck_yaw_collision.STL  R_Ankle_pitch.STL  R_Ankle_pitch_collision.STL  R_Ankle_roll.STL  R_Ankle_roll_collision.STL  R_Arm_roll.STL  R_Arm_roll_collision.STL  R_Foot.STL  R_Foot_collision.STL  R_Hand_pitch.STL  R_Hand_pitch_collision.STL  R_Hip_pitch.STL  R_Hip_pitch_collision.STL  R_Hip_roll.STL  R_Hip_roll_collision.STL  R_Hip_yaw.STL  R_Hip_yaw_collision.STL  (+5 more)
resources/robots/kubot/urdf/: kubot25_pkgs.csv  kubot25_pkgs.urdf
resources/robots/qub/meshes/: L_ankle_link.STL  (+13 more)
(+13 files in other folders)
